# opencoat-inference

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: open_coat_a_2_a_inference_ux_prd_v_0_2.md  technical_design_a2a_inference.md
integrations/openclaw/: README.md  openclaw.plugin.json  package-lock.json  package.json
integrations/openclaw/src/: index.ts
src/opencoat_inference/: __init__.py  cli.py  ledger.py  models.py  openclaw.py  payer.py  privy.py  server.py  settings.py  upstream.py  x402.py
tests/: test_openclaw_adapter.py  test_server.py
