[project]
name = "opencoat-inference"
version = "0.1.0"
description = "Trusted A2A inference access layer for local agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "click>=8.1",
  "fastapi>=0.115",
  "httpx>=0.27",
  "pydantic>=2.7",
  "uvicorn>=0.30",
  "x402[httpx,svm]>=2.10.0",
]

[project.scripts]
opencoat-inference = "opencoat_inference.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
